--- a/AppList/style.css
+++ b/AppList/style.css
@@ -18,13 +18,13 @@ body {
 }
 
 .top {
-  height: 250px;
+  height: 270px;
   padding: 50px;
 }
 
 .top_title {
-  width: 100%;
-  height: 180px;
+  width: 185px;
+  height: 200px;
   background: #ccc;
   margin: 0 0 20px 0;
   border-radius: 10%;
